# articulate-pocketsphinx

./: .gitignore  README.md
.debug/usr/local/lib/: libxyzpocketsphinx.so.3.0.0  libxyzsphinxad.so.3  libxyzsphinxad.so.3.0.0  libxyzsphinxbase.so.3.0.0
.debug/usr/local/lib/pkgconfig/: pocketsphinx.pc
naming_scripts/: Add_changes_to_src_code.ipynb  Makefile_adtools.am  Makefile_lmtools.am  Readme.txt  change_naming.py  include_pocketsphinx.txt  include_sphinxbase.txt  replace_ps (copy).json  replace_ps.json  replace_ps_master (copy).json  replace_ps_master.json  replace_sb (copy).json  replace_sb.json  replace_sb_master (copy).json  replace_sb_master.json  source_code_changes.py
naming_scripts/.ipynb_checkpoints/: Add_changes_to_src_code-checkpoint.ipynb
xyzpocketsphinx/: NEWS  configure.ac
xyzpocketsphinx/include/: ps_search.h
xyzpocketsphinx/src/gst-plugin/: Makefile.am
xyzpocketsphinx/src/libpocketsphinx/: Makefile.am  fsg_lextree.h
xyzpocketsphinx/src/programs/: ps-debug  ps.c  ps.h
xyzpocketsphinx/test/: testfuncs.sh
xyzsphinxbase/: NEWS  configure.ac
xyzsphinxbase/include/sphinxbase/: jsgf.h
xyzsphinxbase/src/libsphinxad/: Makefile.am
xyzsphinxbase/src/libsphinxbase/fe/: Makefile.am
xyzsphinxbase/src/libsphinxbase/feat/: Makefile.am  agc.c
xyzsphinxbase/src/libsphinxbase/lm/: Makefile.am
xyzsphinxbase/src/libsphinxbase/util/: Makefile.am  err.c
